# Auto-Candidatures

./: README.md  profile.example.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: app.db  job_offers.xlsx
data/browser_snapshots/: generic-20260228T233610Z.html  indeed-20260228T231935Z.html
data/imports/: alerts_sync_state.json  job_offers-Copie.xlsx
docs/: Cahier_des_Charges_Application_Candidature_Semi_Automatique.docx
src/app/: main.py
src/app/browser/: connectors.py  playwright_runtime.py
src/app/models/: __init__.py  db.py  repositories.py  schemas.py  tables.py
src/app/services/: ats.py  ats_learning.py  auth.py  browser_automation.py  extraction_dom.py  generation_pack.py  import_offres.py  profile_loader.py  profiles.py  scoring.py
src/app/templates/cv/: base.md.jinja
src/app/templates/lm/: base.md.jinja
src/app/ui/: components.py
src/app/ui/pages/: 1_import_offres.py  __init__.py  _detail.py  _offres.py  _postuler.py  _shared_detail.py  _shared_offres.py  (+8 more)
src/app/utils/: logging.py
src/cli/: manage.py
src/job_application_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_app_launch.py  test_ats.py  test_ats_learning.py  test_auth_profiles.py  test_browser_automation.py  test_browser_connectors.py  test_db.py  test_generation_pack.py  test_import_offres.py  test_pipeline.py  test_profiles.py  test_scoring.py
tests/fixtures/: form_basic.html  form_compensation.html  form_professional_links.html  profile.yaml  profile_mapping.yaml  profile_pack.yaml  profile_pack_missing.yaml
