[project]
name = "job-application-assistant"
version = "0.1.0"
description = "Application de candidature semi-automatique"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "streamlit>=1.32",
  "sqlmodel>=0.0.14",
  "SQLAlchemy>=2.0",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "playwright>=1.43",
  "pandas>=2.2",
]

[project.scripts]
app = "app.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
