[project]
name = "job-application-assistant"
version = "0.1.0"
description = "Application de candidature semi-automatique"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "streamlit>=1.32",
  "sqlmodel>=0.0.14",
  "SQLAlchemy>=2.0",
  "pydantic>=2.6",
  "jinja2>=3.1",
  "playwright>=1.43",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "pytest>=8.1",
  "ruff>=0.11",
]

[project.scripts]
app = "cli.manage:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
